[package]
name = "rust_jwt_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.2"
bcrypt = "0.12"
dotenv = "0.15"
uuid = "1.0"
tower = "0.4"
hyper = "0.14"
chrono = "0.4"
headers = { version = "0.4" }
all = "0.0.1"
